--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ Flask-Redis==0.3.0
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+Flask-WhooshAlchemyPlus==0.7.5
 Flask-WTF==0.14.2
 funcsigs==1.0.2
 future==0.15.2
@@ -55,6 +56,7 @@ ipython==5.0.0b3
 ipython-genutils==0.2.0
 isort==4.2.5
 itsdangerous==0.24
+jieba==0.38
 Jinja2==2.9.6
 kombu==4.0.2
 lazy-object-proxy==1.3.1
@@ -116,6 +118,7 @@ wcwidth==0.1.7
 WebOb==1.6.1
 WebTest==2.0.21
 Werkzeug==0.12.1
+Whoosh==2.7.4
 wrapt==1.10.10
 WTForms==2.1
 xlrd==1.0.0
